[package]
name = "fairqueue"
version = "0.2.0"
authors = ["0x484558 <hex@0x484558.dev>"]
license = "0BSD"
description = "Spatially distancing fair queue. A kind of queue for sequential round-robin processing."
repository = "https://github.com/0x484558/FairQueue"
edition = "2024"
keywords = ["no_std", "queue", "data-structures", "algorithm"]
categories = ["data-structures"]

[features]
default = []
std = []

[dependencies]

[dev-dependencies]
criterion = "0.8"
proptest = { version = "1.5.0", default-features = false, features = ["std"] }

[[bench]]
name = "fairqueue"
harness = false
